--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             <h3 class="mb-0"><a href="https://tool-crib.ml/index.php">Tool Crib Managment System</a></h3>
                             <div class="subheading mb-3">Php - Html - Javascript</div>
                             <p>Final Year Project. A Website to digitalise tool crib management system.<br/>
-                            Where user are able to loand and return tools by scanning the tool's barcode.<br/>
+                            Where user are able to loaned and return tools by scanning the tool's barcode.<br/>
                             The tool crib master will be able to check the tool status and loan history of the tools.
                             </p>
                         </div>
@@ -206,7 +206,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Adobe Photoshop
+                            Adobe Photoshop,Adobe Illustrator & Adobe Premiere Pro
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
