--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item">PHP</i></li>
+                        <li class="list-inline-item"><i class="fab fa-php"></i></li>
                     </ul>
                     <div class="subheading mb-3">Repair Skills</div>
                     <ul class="fa-ul mb-0">
