--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
           >
             <div class="flex-grow-1">
               <h3 class="mb-0">
-                <a href="https://www.secret-santa.tk/">Secret Santa</a>
+                <a href="https://www.secret-santa.ml/">Secret Santa</a>
               </h3>
               <div class="subheading mb-3">Php - Html - Javascript</div>
               <p>
@@ -208,7 +208,7 @@
             </div>
             <div class="flex-shrink-0">
               <span class="text-primary"
-                ><a href="https://www.secret-santa.tk/"
+                ><a href="https://www.secret-santa.ml/"
                   >Click to Open Website</a
                 ></span
               >
