--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
           >
             <div class="flex-grow-1">
               <h3 class="mb-0">
-                <a href="https://testleonardlouis.ml/">Your Design</a>
+                <a href="https://www.your-design.ml/">Your Design</a>
               </h3>
               <div class="subheading mb-3">Php - Html - Javascript</div>
               <p>
@@ -229,7 +229,7 @@
             </div>
             <div class="flex-shrink-0">
               <span class="text-primary"
-                ><a href="https://testleonardlouis.ml/"
+                ><a href="https://www.your-design.ml/"
                   >Click to Open website</a
                 ></span
               >
