--- a/index.html
+++ b/index.html
@@ -243,7 +243,10 @@
                 <a href="https://www.inner-co.ml/">Inner Co.</a>
               </h3>
               <div class="subheading mb-3">Php - Html - Javascript</div>
-              <p>Sample project for ecommerce website.</p>
+              <p>
+                Sample project for ecommerce website with working payment
+                gateway.
+              </p>
             </div>
             <div class="flex-shrink-0">
               <span class="text-primary"
